sout --> logger, arreglo warning sonarqube